# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactory/: Button.h  CMakeLists.txt  Slider.h  UIElements.h  client.cpp
Adapter/: CMakeLists.txt  application.cpp  pegadapter.h  pegs.h  roundhole.h
Bridge/: CMakeLists.txt  client.cpp  device.h  remotecontrol.h
Builder/: Builders.h  CMakeLists.txt  Director.h  Products.h  application.cpp
COR/: CMakeLists.txt  button.h  client.cpp  component.h  componenttooltip.h  container.h  dialog.h  panel.h
Command/: CMakeLists.txt  application.cpp  application.h  client.cpp  command.cpp  command.h  commandhistory.h  copy.cpp  copy.h  cut.cpp  cut.h  editor.h  paste.h  undo.h
Composite/: CMakeLists.txt  client.cpp  graphic.h
DeathBirth/: CMakeLists.txt  DeathBirth.cpp
Decorator/: CMakeLists.txt  client.cpp  datasource.h  datasourcedecorator.h  filedatasource.h
Facade/: CMakeLists.txt  client.cpp  subsystems.h  videoconverter.h
FactoryMethod/: Button.h  ButtonCreator.h  CMakeLists.txt  client.cpp  main.cpp
FisherYatesShuffle/: CMakeLists.txt  Shuffle.cpp
Flyweight/: CMakeLists.txt  client.cpp  tree.h  treefactory.h  treetype.h
GCD/: CMakeLists.txt  GCD.cpp  GCD.h
Iterator/: CMakeLists.txt  client.cpp  facebook.h  facebookiterator.h  profile.h  profileiterator.h  socialnetwork.h
Mediator/: CMakeLists.txt  authenticationdialog.h  client.cpp  component.h  concretecomponents.h  mediator.h
Memento/: CMakeLists.txt  client.cpp  command.h  editor.h
Observer/: CMakeLists.txt  client.cpp  eventlisteners.h  eventmanager.h
Prototype/: CMakeLists.txt  Shapes.h  application.cpp
Proxy/: CMakeLists.txt  cachedyoutube.h  client.cpp  youtube.h  youtubeinterface.h
Singleton/: CMakeLists.txt  Database.h  application.cpp
State/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  client.cpp
Strategy/: CMakeLists.txt  client.cpp  context.h  strategies.h
TemplateMethod/: CMakeLists.txt  client.cpp  templatemethod.h
TicTac/: CMakeLists.txt  TicTac.cpp  TicTac.h
Visitor/: CMakeLists.txt  client.cpp  shapes.cpp  shapes.h  visitor.cpp  visitor.h
